--- a/packages/form-control/src/css/form-file.css
+++ b/packages/form-control/src/css/form-file.css
@@ -92,7 +92,7 @@
         box-shadow: var(--form-file-focus-box-shadow);
         border-color: var(--form-file-input-focus-border-color);
 
-        .dark & {
+        @variant dark {
             color: var(--form-file-dark-color);
             background-color: var(--form-file-dark-background-color);
             border-color: var(--form-file-dark-focus-border-color);
@@ -104,7 +104,7 @@
         border-color: var(--form-file-input-disabled-border-color);
         background-color: var(--form-file-input-didabled-background-color);
         
-        .dark & {
+        @variant dark {
             color: var(--form-file-dark-disabled-color);
             background-color: var(--form-file-dark-disabled-background-color);
             border-color: var(--form-file-dark-disabled-border-color);
@@ -115,7 +115,7 @@
         border-color: var(--form-file-input-disabled-border-color);
         background-color: var(--form-file-input-didabled-background-color);
         
-        .dark & {
+        @variant dark {
             color: var(--form-file-dark-disabled-color);
             background-color: var(--form-file-dark-disabled-background-color);
             border-color: var(--form-file-dark-disabled-border-color);
@@ -136,7 +136,7 @@
     border-radius: var(--form-file-label-border-radius);
     box-shadow: var(--form-file-label-box-shadow);
     
-    .dark & {
+    @variant dark {
         color: var(--form-file-dark-color);
         background-color: var(--form-file-dark-background-color);
         border-color: var(--form-file-dark-border-color);
@@ -163,7 +163,7 @@
     border-top-left-radius: var(--from-file-border-radius);
     border-bottom-left-radius: var(--from-file-border-radius);
     
-    .dark & {
+    @variant dark {
         color: var(--form-file-text-dark-color);
         background-color: var(--form-file-dark-background-color);
         border-color: var(--form-file-dark-border-color);
@@ -186,7 +186,7 @@
     border-top-right-radius: var(--from-file-border-radius);
     border-bottom-right-radius: var(--from-file-border-radius);
     
-    .dark & {
+    @variant dark {
         color: var(--form-file-dark-color);
         background-color: var(--form-file-dark-background-color);
         border-color: var(--form-file-dark-border-color);
